Updates Lesson 05
