# lesson5/controllers/products.js
@@ -41,11 +41,14 @@ const updateProduct = async (req, res) => {
   const userId = new ObjectId(req.params.id);
   // be aware of updateOne if you only want to update specific fields
   const product = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday
+    name: req.body.name,
+    description: req.body.description,
+    price: req.body.price,
+    category: req.body.category,
+    manufacturer: req.body.manufacturer,
+    inStock: req.body.inStock,
+    brand: req.body.brand,
+    color: req.body.color,
   };
   const response = await mongodb
     .getDb()
