# lesson5/routes/index.js
@@ -3,6 +3,6 @@ const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/products', require('./products'));
-router.use('/contacts', require('./contacts'));
+router.use('/orders', require('./orders'));
 
 module.exports = router;
